		Triggers before/after applying a status effect
		Takes the new StatusEffect enum as its optional argument
		Return false on the PRE callback to cancel adding the status effect
	- MC_PLAYER_HEALTH_TYPE_CHANGE
		Runs when a player's health type changes, but before automatic health conversion
	- MC_POST_START_AMBUSH_WAVE(boolean BossAmbush)
		Fires at the start of challenge/boss rush room wave
	- MC_POST_START_GREED_WAVE
		(add description later)
* New Enums:
	- DoorMask
	- WaterClipFlag
	- PlayerHUDLayout
	- RoomEventOutput
* Room:
	- GetWallColor()
* Isaac:
	- GetAllowedDoorsMaskForRoomShape: Returns a DoorMask representing all DoorSlots that are allowed for the given RoomShape.
* Added content and resources support for stringtable.sta, allowing for custom translation strings and categories. This also allows adding custom fortunes.
* Added the following customtag for items.xml:
	* "noexpansionpack" - Prevents the active item (with 1 or 2 max charges) from being picked by Expansion Pack trinket.
* Added the following customcache for items.xml:
	* "healthtype" - Re-evaluate the player's HealthType
Fixes:
* Fixed an issue with luamod autocomplete not displaying all the available options
* Fixed an issue where modded items' crafting quality was set to 0 if not explicitly defined in the XML.
* Players can no longer get stuck with buggy heart containers when changed to soul/bone heart health types (they get converted by default).
* EntityPlayer:
	- SetBagOfCraftingSlot / SetBagOfCraftingContent now automatically recalculate the crafting output & shift bag contents if empty spaces are added in the middle.
* ItemConfig_Costume:
	- Fixed SkinColor attribute (now provides a valid int and can be modified)
* Level:
	- TryPlaceRoom & related functions no longer consider a room placement valid if the only neighbor would be a secret room and "AllowSpecialNeighbors" is false.