@@ -25,3 +25,4 @@ void ASMPatchesBedCallbacks();
 void ASMPatchPrePlayerPocketItemSwap();
 void ASMPatchMainMenuCallback();
 void ASMPatchPreModUnloadCallbackDuringShutdown();
+void ASMPatchPostRoomRenderEntitiesCallback();
