@@ -32,7 +32,7 @@ ModCallbacks.MC_PRE_ENTITY_THROW = 1040
 ModCallbacks.MC_POST_ENTITY_THROW = 1041
 ModCallbacks.MC_PLAYER_INIT_POST_LEVEL_INIT_STATS = 1042
 ModCallbacks.MC_PRE_ROOM_EXIT = 1043
-
+ModCallbacks.MC_POST_ROOM_RENDER_ENTITIES = 1044
 ModCallbacks.MC_POST_RENDER_PLAYER_HEAD = 1045
 ModCallbacks.MC_POST_RENDER_PLAYER_BODY = 1046
 ModCallbacks.MC_COMPLETION_MARK_GET = 1047
